--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ScreenShareToBrowser</string>
     <string name="start_record">开始录屏</string>
     <string name="stop_record">停止录屏</string>
+    <string name="local_ip">本机</string>
+
 </resources>
